# ai_app_backend

./: .gitignore  CLAUDE.md  READNE.md  main.py  memo.txt  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: main.py
app/core/: app_exception.py  config.py  database.py  init_db.py  security.py
app/dependencies/: repositories.py
app/endpoints/: auth.py  eigoat.py
app/repositories/: auth_repository.py  auth_supabase_repository.py  english_repository.py  english_supabase_repository.py
app/repository/: auth_postgres_repository.py  email_postgress_resend_repository.py  practice_api_openai_repository.py  practice_postgres_repository.py  quiz_postgres_repository.py  quiz_type_postgres_repository.py  recall_card_postgres_repository.py  review_schedule_postgres_repository.py  study_ai_api_openai_repository.py  study_record_postgres_repository.py  user_answer_postgres_repository.py
app/schema/: models.py
app/schemas/: auth.py  chat.py  english_chat.py  item.py  personal_information.py  rag.py  recipe.py  text_to_sql.py
app/services/: auth_service.py  chat_service.py  english_chat_service.py  home_service.py  item_service.py  memory_service.py  practice_service.py  rag_service.py  recall_card_service.py  recipe_service.py  search_event_service.py  study_service.py  test.py  text_to_sql.py
design/: diagram.a5er
memo/: memo.txt  テストメモ.txt
migrations/: env.py
migrations/versions/: 07bf809c98bc_なぜかクイズの種類の略語がreadonlyのため修正.py  0a2b23c2418c_en_recall_cardsテーブルの作成.py  (+15 more)
(+90 files in other folders)
