[project]
name = "ai_app_backend"
version = "0.1.0"
description = "EIGOAT - English learning platform backend"
requires-python = ">=3.12"
dependencies = [
    "langchain-core",
    "langchain-openai",
    "langchain-community",
    "langgraph",
    "numpy",
    "faiss-cpu",
    "pydantic-settings",
    "retry",
    "decorator",
    "fastapi",
    "uvicorn",
    "pytz",
    "requests",
    "langchain-text-splitters",
    "langchain-postgres",
    "asyncpg",
    "tavily-python",
    "bcrypt",
    "pyjwt",
    "passlib[bcrypt]",
    "python-multipart",
    "email-validator",
    "sqlalchemy",
    "python-jose[cryptography]",
    "alembic",
    "psycopg2-binary",
    "resend",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "httpx",
    "faker",
    "aiosqlite",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
